custom depoly endpoint

--- a/.github/workflows/deploy_pages.yml
+++ b/.github/workflows/deploy_pages.yml
@@ -10,5 +10,5 @@ permissions:
 
 jobs:
     deploy:
-        uses: AlexVCaron/nf-neuro-documentation/.github/workflows/deploy.yml@main
+        uses: AlexVCaron/nf-neuro-documentation/.github/workflows/deploy.yml@temp/dummy-boy
         secrets: inherit
